# RockPaperScissors

./: CMakeLists.txt  README.md  rps.cpp  rps.h
headers/: ai.h  game.h  hand.h  user.h
sources/: ai.cpp  game.cpp  hand.cpp  user.cpp
